# DeliveryCarVision

./: .gitignore  .gitmodules  README.md  dockerfile  dockerfile.bak  supervisord.conf
.github/workflows/: docker-publish.yml
ccv2-y11n-fp32_ncnn_model/: metadata.yaml  model.ncnn.param
ccv2-y11n_ncnn_model/: metadata.yaml  model_ncnn.py
config/: cam_params.yaml
launch/: start_all.launch.py
src/circle_detector/: CMakeLists.txt  package.xml
src/circle_detector/include/circle_detector/: circle_detector.hpp
src/circle_detector/src/: circle_detector.cpp
src/color_circle_detector/: CMakeLists.txt  package.xml
src/color_circle_detector/config/: circle_detector_params.yaml
src/color_circle_detector/launch/: circle_detector_launch.py
src/color_circle_detector/src/: color_circle_detector.cpp
src/qr_code_detector/: CMakeLists.txt
src/qr_code_detector/config/: qr_params.yaml
src/qr_code_detector/launch/: qr_detector_launch.py
src/qr_code_detector/src/: qr_code_detector.cpp
src/uart_communicator/: CMakeLists.txt  package.xml
src/uart_communicator/src/: uart_communicator.cpp
